# Django-Task-Manager

./: .coveragerc  .gitignore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  test-coverage.yml  tests.yml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
staticfiles/: staticfiles.json
staticfiles/css/: page404.css  page404.css.br
staticfiles/images/: favicon.52fac0a324d0.ico.br
task_manager/: constants.py  customhandlepermission.py  messages.py  mixins.py  settings.py  strings.py  urls.py  util.py  views.py
task_manager/fixtures/: Labels.json  Register_users.json  Statuses.json  Tasks.json  Users.json  test_data.json
task_manager/label/: forms.py  models.py  urls.py  views.py
task_manager/label/fixtures/: Label_labels.json  Label_statuses.json  Label_tasks.json  Label_users.json
task_manager/label/migrations/: 0001_initial.py  0002_label_created_at.py  0003_alter_label_name.py  0004_alter_label_name.py  (+1 more)
task_manager/labels/: forms.py  models.py  views.py
task_manager/status/: forms.py  models.py  urls.py  views.py
task_manager/statuses/: forms.py  models.py  views.py
task_manager/task/: filter.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/: filter.py  forms.py  models.py  views.py
task_manager/templates/: 404.html  base.html  confirm_delete.html  footer.html  form.html  index.html  nav.html
task_manager/tests/: test_views.py
task_manager/user/: forms.py  models.py  urls.py  util.py  views.py
task_manager/users/: forms.py  views.py
(+103 files in other folders)
